Implement Liquibase migrations and update README